# metavase_embedder

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yaml  entrypoint.sh  init-analytics.sql  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_user_first_last_name.py  003_add_user_status_and_timestamps.py  2026_01_06_1124-c44e7ec7eecd_add_metabase_password.py
app/: config.py  database.py  main.py  models.py
app/auth/: dependencies.py  routes.py
app/dashboard/: routes.py
app/metabase/: client.py  routes.py  sync.py
app/workspace/: routes.py
frontend/src/: App.jsx
frontend/src/components/Common/Auth/: Login.jsx  Register.jsx
frontend/src/components/Dashboard/: CreateDashboard.jsx  DashboardCard.jsx  DashboardViewer.jsx
frontend/src/components/Layout/Auth/: Register.jsx
frontend/src/components/Workspace/: CreateWorkspace.jsx  WorkspaceCard.jsx  WorkspaceList.jsx  WorkspaceMembers.jsx
frontend/src/components/metabase/: MetabaseEmbed.jsx  MetabaseOpener.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: CreatePage.jsx  DashboardsPage.jsx  HomePage.jsx  WorkspacesPage.jsx
frontend/src/services/: api.js  auth.js  metabase.js
